test/param/kbrady/paramIntDivZero.good
paramIntDivZero.chpl:2: error: Attempt to divide by zero
